syntax = "proto3";

package yandex.cloud.priv.schemaregistry.v1;

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/schemaregistry";

import "google/api/annotations.proto";
import "google/protobuf/descriptor.proto";

service VersionService {
    rpc List(ListVersionsRequest) returns (ListVersionsResponse) {
        option (google.api.http) = {
            get: "/v1/namespaces/{namespace_id}/schemas/{schema_id}/versions"
        };
    }
    rpc Delete(DeleteVersionRequest) returns (DeleteVersionResponse) {
        option (google.api.http) = {
            delete: "/v1/namespaces/{namespace_id}/schemas/{schema_id}/versions/{version_id}"
        };
    }
}

message ListVersionsRequest {
    string namespace_id = 1;
    string schema_id = 2;
}

message ListVersionsResponse {
    repeated int32 versions = 1;
}

message DeleteVersionRequest {
    string namespace_id = 1;
    string schema_id = 2;
    int32 version_id = 3;
}

message DeleteVersionResponse {
    string message = 1;
}
